# twemoji-colr0

./: .gitmodules  main.py  pyproject.toml  readme.md
