[tool.poetry]
name = "twemoji-colr"
version = "0.1.0"
description = ""
authors = ["melody < 35177464+HexCodeFFF@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fonttools = {version = "^4.37.3", extras = ["unicode"]}
nanoemoji = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
